# cloud-ai-integration-console

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  catalog.py  cli.py  data.py  errors.py  main.py  models.py  observability.py  openai_service.py  services.py  storage.py
backend/data/: catalog.json
backend/tests/: test_audit.py  test_errors.py  test_persistence.py  test_prompt_history.py  test_reviews.py  test_services.py
docs/: API.md  ARCHITECTURE.md  MVP_SCOPE.md  ROADMAP.md  USE_CASE.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package.json
frontend/src/: App.tsx  api.ts  mockData.ts  seedData.ts  styles.css  types.ts
